switch buttons added

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -31,7 +31,7 @@ p {
   max-width: 290px;
   height: 55px;
   background-color: #1e252b;
-  border: 1px solid #92e8fe;
+  border: 1px solid #39535e;
   margin: 20px 0;
   .option {
     font-size: 16px;
